# shprompt

./: .clang-format  .gitignore  CMakeLists.txt  README.md
libshprompt/: CMakeLists.txt
libshprompt/libshprompt/: config.c  config.h  context.h  module.c  module.h  segment.c  segment.h
libshprompt/libshprompt/modules/: character.c  character.h  directory.c  directory.h  git.c  git.h  status.c  status.h
shprompt/: CMakeLists.txt
shprompt/shprompt/: shprompt.c
